--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -6,15 +6,17 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "clean": "rimraf dist",
+    "clean:openapi-validator": "cd ../openapi-validator && yarn clean",
     "format": "prettier --write ../../ --ignore-path ../../.prettierignore",
-    "lint": "tsc --noEmit && eslint .",
+    "lint": "tsc --noEmit --project tsconfig.eslint.json && eslint .",
     "lint:fix": "yarn lint --fix",
     "build": "tsc",
-    "test": "ts-mocha --recursive",
+    "test": "ts-mocha --extension ts --recursive",
     "test:watch": "yarn test --watch",
-    "test:coverage": "nyc yarn test && nyc report --reporter=lcov && nyc check-coverage",
+    "test:coverage": "yarn clean && yarn clean:openapi-validator && nyc yarn test && nyc report --reporter=lcov && nyc check-coverage",
     "test:coverage:browse": "yarn test:coverage; open ../coverage/lcov-report/index.html",
-    "test:ci": "yarn format && yarn lint && yarn test:coverage"
+    "test:ci": "yarn format && yarn lint && yarn test:coverage",
+    "prepack": "yarn build"
   },
   "repository": "https://github.com/openapi-library/OpenAPIValidators/tree/master/packages/chai-openapi-response-validator",
   "author": "OpenApiChai <openapichai@gmail.com>",
@@ -36,16 +38,16 @@
   },
   "homepage": "https://github.com/openapi-library/OpenAPIValidators/tree/master/packages/chai-openapi-response-validator#readme",
   "files": [
-    "index.d.ts",
-    "dist/**/*"
+    "dist"
   ],
   "devDependencies": {
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.1",
     "axios": "^0.21.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "eslint": "^7.11.0",
-    "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-mocha": "^8.0.0",
