--- a/packages/openapi-validator/package.json
+++ b/packages/openapi-validator/package.json
@@ -42,13 +42,15 @@
     "js-yaml": "^4.0.0",
     "openapi-response-validator": "^9.2.0",
     "openapi-schema-validator": "^9.2.0",
-    "path-parser": "^6.1.0"
+    "path-parser": "^6.1.0",
+    "typeof": "^1.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
     "@types/js-yaml": "^4.0.3",
     "@types/request": "^2.48.7",
     "@types/superagent": "^4.1.12",
+    "@types/typeof": "^1.0.0",
     "openapi-types": "^9.2.0"
   }
 }
