--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lerna:publish": "lerna publish"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.11.0",
