--- a/packages/jest-openapi/package.json
+++ b/packages/jest-openapi/package.json
@@ -41,6 +41,8 @@
   ],
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/request-promise": "^4.1.48",
+    "@types/supertest": "^2.0.11",
     "axios": "^0.21.1",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
