--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -43,6 +43,8 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
+    "@types/request-promise": "^4.1.48",
+    "@types/supertest": "^2.0.11",
     "axios": "^0.21.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
