--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -43,9 +43,10 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
+    "@types/request-promise": "^4.1.48",
+    "@types/supertest": "^2.0.11",
     "axios": "^0.21.1",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "eslint": "^7.11.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
