test: upgrade TypeScript and fix strict null checks

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,6 +10,7 @@ env:
 
 extends:
   - eslint:recommended
+  - airbnb-base
   - airbnb-typescript/base
   - plugin:@typescript-eslint/recommended
   # - plugin:@typescript-eslint/recommended-requiring-type-checking
