--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node": ">=10.0.0"
   },
   "scripts": {
+    "postinstall": "patch-package",
+    "patch-packages": "yarn patch-package openapi-response-validator",
     "clean": "yarn workspaces run clean && rimraf packages/.nyc_output && rimraf packages/coverage",
     "format": "prettier --write . --ignore-path .prettierignore",
     "lint": "yarn workspaces run lint",
@@ -20,10 +22,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.11.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
@@ -31,9 +34,11 @@
     "express": "^4.17.1",
     "husky": "^4.3.0",
     "lerna": "^4.0.0",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.2.3"
+    "typescript": "^4.4.3"
   },
   "husky": {
     "hooks": {
