--- a/packages/jest-openapi/package.json
+++ b/packages/jest-openapi/package.json
@@ -45,8 +45,6 @@
     "@types/supertest": "^2.0.11",
     "axios": "^0.21.1",
     "eslint": "^7.11.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
@@ -54,8 +52,7 @@
     "request-promise": "^4.2.6",
     "supertest": "^6.0.0",
     "ts-jest": "^26.5.3",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "ts-node": "^9.1.1"
   },
   "dependencies": {
     "jest-matcher-utils": "^26.6.2",
