--- a/packages/openapi-validator/package.json
+++ b/packages/openapi-validator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openapi-validator",
-  "version": "0.14.1",
+  "version": "0.14.2-alpha.0",
   "description": "Common code for jest-openapi and Chai OpenAPI Response Validator",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
