--- a/packages/jest-openapi/package.json
+++ b/packages/jest-openapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-openapi",
-  "version": "0.14.2-alpha.0",
+  "version": "0.14.2",
   "description": "Jest matchers for asserting that HTTP responses satisfy an OpenAPI spec",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -56,6 +56,6 @@
   },
   "dependencies": {
     "jest-matcher-utils": "^26.6.2",
-    "openapi-validator": "^0.14.2-alpha.0"
+    "openapi-validator": "^0.14.2"
   }
 }
